fix: overflow of table

--- a/src/app/pages/check-imports-table/check-imports-table.component.scss
+++ b/src/app/pages/check-imports-table/check-imports-table.component.scss
@@ -52,6 +52,7 @@
     padding: 0 16px;
     vertical-align: middle;
     max-width: 90px;
+    overflow: hidden;
     &-container {
       overflow: hidden;
       text-overflow: ellipsis;
